test_data/data_validation_tests_data/invalid_currency_codes_test_data/bank_export_deprecated_currency_test_new.xlsx
version https://git-lfs.github.com/spec/v1
oid sha256:be8087a66a92b76af98052f15485aa4ee67bd8b282accaccdacd8f8b2224834b
size 5544
